Ensure first message is not cut off in iOS theme
Without this, the user couldn’t scroll all the way up and  the first message was
cut off as panel extended below header.

--- a/stylesheets/_ios.scss
+++ b/stylesheets/_ios.scss
@@ -81,7 +81,10 @@ $ios-border-color: rgba(0,0,0,0.1);
   }
 
   .conversation .panel {
-    height: 100%;
+    position: absolute;
+    top: $header-height;
+    bottom: 0;
+    width: 100%;
   }
 
   .settings h3,
